<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/colorDark"
    >
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:orientation="vertical"
        android:background="@color/colorDark"
        >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >
            <TextView
                android:id="@+id/imprimir"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:textSize="65sp"
                android:textColor="@color/colorWhite"
                >

            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:onClick="eliminar"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/borrar"
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorRed"
                >
            </TextView>
            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="60sp"
                android:gravity="top"
                android:textColor="@color/colorWhite"
                >
            </TextView>
            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text=""
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                >
            </TextView>
            <TextView
                android:onClick="operacion"
                android:id="@+id/division"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/division"
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorNarange"
                >
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:onClick="teclado"
                android:id="@+id/siete"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/siete"
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlackPlus"
                >
            </TextView>
            <TextView
                android:onClick="teclado"
                android:id="@+id/ocho"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/ocho"
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlackPlus"
                >
            </TextView>
            <TextView
                android:onClick="teclado"
                android:id="@+id/nueve"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/nueve"
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlackPlus"
                >
            </TextView>
            <TextView
                android:onClick="operacion"
                android:id="@+id/muliplicacion"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/multiple"
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorNarange"
                >
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:onClick="teclado"
                android:id="@+id/cuatro"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cuatro"
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlackPlus"
                >
            </TextView>
            <TextView
                android:onClick="teclado"
                android:id="@+id/cinco"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/cinco"
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlackPlus"
                >
            </TextView>
            <TextView
                android:onClick="teclado"
                android:id="@+id/seis"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/seis"
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlackPlus"
                >
            </TextView>
            <TextView
                android:onClick="operacion"
                android:id="@+id/resta"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/menos"
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorNarange"
                >
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:onClick="teclado"
                android:id="@+id/uno"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/uno"
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlackPlus"
                >
            </TextView>
            <TextView
                android:onClick="teclado"
                android:id="@+id/dos"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/dos"
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlackPlus"
                >
            </TextView>
            <TextView
                android:onClick="teclado"
                android:id="@+id/tres"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/tres"
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlackPlus"
                >
            </TextView>
            <TextView
                android:onClick="operacion"
                android:id="@+id/suma"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/mas"
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorNarange"
                >
            </TextView>
        </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >
            <TextView
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlackPlus"
                >
            </TextView>
            <TextView
                android:onClick="teclado"
                android:id="@+id/cero"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/cero"
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlackPlus"
                >
            </TextView>
            <TextView
                android:onClick="teclado"
                android:id="@+id/punto"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/punto"
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorBlackPlus"
                >
            </TextView>
            <TextView
                android:id="@+id/igual"
                android:onClick="resultado"
                android:layout_width="0px"
                android:layout_height="wrap_content"
                android:layout_weight="2"
                android:text="@string/igual"
                android:textSize="60sp"
                android:gravity="center"
                android:textColor="@color/colorWhite"
                android:background="@color/colorNarange"
                >
            </TextView>
        </LinearLayout>
    </LinearLayout>



</RelativeLayout>